add update user avatar endpoind + swagger documentation for this endpoint
